Fix spacing between polaroids

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ html, body {
 
 .d-flex {display: flex;}
 .flex-wrap {flex-wrap: wrap;}
-.gap-3 {gap: 3rem;}
+.gap-2 {gap: 2rem;}
 
 
 
@@ -73,8 +73,6 @@ main {
   background: white;
   padding: 1rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-
-  margin-bottom: 1rem;
 }
 
 .img-container img {
